--- a/index.html
+++ b/index.html
@@ -27,20 +27,58 @@
                         <div id="barChart"></div>
                     </div>
                     <!-- Gráfica de Dona -->
-                    <div class="col-md-6 col-12 d-flex justify-content-center">
+                    <div class="col-md-5 col-11 d-flex justify-content-center">
                         <div id="chart_rendimiento"></div>
+                    </div>
+                    <div class="col-md-1">
+                        <img src="./img/pdf.png" class="img-fluid me-2" style="width:35px; cursor: pointer;"
+                            title="Ver Reporte General" id="verPdfGeneral">
                     </div>
                 </div>
             </div>
+            <div class="position-fixed top-0 start-30 translate-middle-x p-3" style="z-index: 11; left: 30%;">
+                <div id="pdfToastGeneral" class="toast d-none" role="alert" aria-live="assertive" aria-atomic="true"
+                     data-bs-autohide="false" data-bs-delay="0" style="width: 260%; max-width: none;">
+                    <div class="toast-header">
+                        <strong class="me-auto">Reporte General</strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body d-flex align-items-center justify-content-center">
+                        <!-- Agrega un iframe con la fuente del PDF -->
+                        <iframe src="./docs/9MarzoGeneral.pdf" width="130%" height="400" style="border: none;"></iframe>
+                    </div>
+                </div>
+            </div>      
             <!--Mejores y peores rendimientos-->
             <div class="shadow p-3 mb-5 bg-light rounded mt-4">
+                <div class="row">
+                    <h1 class="text-center mb-4" style="background:#204f7be7; color:#ffff;">Rendimientos
+                        <img src="./img/pdf.png" class="img-fluid me-2" style="width:35px; cursor: pointer;"
+                            title="Ver Mejores y Peores Rendimientos" id="verPdf">
+                    </h1>
+                </div>
+
+                <div class="position-fixed top-0 start-60 translate-middle-x p-3" style="z-index: 11; left: 30%;">
+                    <div id="pdfToast" class="toast d-none" role="alert" aria-live="assertive" aria-atomic="true"
+                        data-bs-autohide="false" data-bs-delay="0" style="width: 260%; max-width: none;">
+                        <div class="toast-header">
+                            <strong class="me-auto">Mejores y Peores Rendimientos</strong>
+                            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                        </div>
+                        <div class="toast-body d-flex align-items-center justify-content-center">
+                            <!-- Agrega un iframe con la fuente del PDF -->
+                            <iframe src="./docs/9MARZO.pdf" width="130%" height="400" style="border: none;"></iframe>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row mb-4">
                     <div class="col-md-6">
-                        <h1 class="text-center mb-4" style="background:#60c34c; color:#ffff;">Mejores Rendimientos
+                        <h1 class="text-center mb-4" style="background:#60c34c; color:#ffff;">Mejores
                         </h1>
                         <ul class="list-group list-group-flush text-center">
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2><img src="img/medalla.png" class="img-fluid me-2" style="width:20px;"
+                                <h2><img src="img/medalla.png" class="img-fluid me-2" id style="width:25px;"
                                         alt="">Tesorería
                                 </h2>
 
@@ -54,7 +92,7 @@
                         </ul>
                     </div>
                     <div class="col-md-6">
-                        <h1 class="text-center mb-4" style="background:#b63329; color:#ffff;">Peores Rendimientos
+                        <h1 class="text-center mb-4" style="background:#b63329; color:#ffff;">Peores
                         </h1>
                         <ul class="list-group list-group-flush text-center">
                             <li class="list-group-item bg-light" style="color:#204f7b;">
@@ -147,7 +185,7 @@
     <script src="./js/GraficaDona.js"></script>
     <script src="./js/GraficasDependencias.js"></script>
     <script src="./js/Hipervinculos.js"></script>
-    <script src="./js/Funcionalidad.js"></script>
+    <!--<script src="./js/Funcionalidad.js"></script>-->
 </body>
 
 </html>
